[package]
name = "onebrc"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "0"
ahash = "0"
memmap = "0"
